# Lp3-Engine-Macaroni

./: .gitignore  CMakeLists.txt  Dreamcast.cmake  README.md  README.rst  appveyor.yml  conanfile.py  project.lua
Core/: project.lua
Core/docs/: index.mdoc
Dependencies/: README.rst
Dependencies/DcTestRunner/: README.rst  dcrun.py  dctest.py  dcutils.py
Dependencies/Lp3Project/: BoostBuild.txt  README.txt  project.lua
Dependencies/Lp3Project/src/: Lp3BoostTestTest.cpp  Lp3CMakeAppeasement.cpp  Lp3CMakeAppeasementGfx.cpp  Lp3Project.lua
Engine/: project.lua
Engine/Core/: project.lua
Engine/Core/src/: Dependencies.mcpp  Test.mcpp
Engine/Core/src/Demos/: MicroMainDemo.mcpp  ResourceDemo.mcpp
Engine/Core/src/Lp3/: Abort.h  Abort.mcpp  Assert.h  Assert.mcpp  DreamcastTestAsserts.mcpp  Exception.mcpp  LE.h  LE.mcpp  Log.cpp  Log.h  PrimitivesTest.cpp  Test.h  Windows.h
Engine/Core/src/Lp3/Engine/: Binary.h  MicroMain.h  NoOptMain.h
Engine/Core/src/Lp3/Engine/Coroutine/: Coroutine.mcpp  CoroutineMacros.h  CoroutineTest.cpp
Engine/Core/src/Lp3/Engine/Log/: ErrOut.mcpp
Engine/Core/src/Lp3/Engine/Memory/: Allocator.h  AllocatorTest.cpp  GlobalHeap.mcpp  Host.mcpp  ManagedPointer.h  ManagedPointer.mcpp  MemoryStack.mcpp  MemoryStackTest.cpp  SharedHost.mcpp
Engine/Core/src/Lp3/Engine/Misc/: WCharToCharConverter.mcpp
Engine/Core/src/Lp3/Engine/Resources/: DreamcastInputFileStream.mcpp  EnvVars.mcpp  InputFileStream.hpp  MediaPath.mcpp  MemoryStream.mcpp  PcInputFileStream.mcpp  ReadStream.mcpp
Engine/Core/src/Lp3/Engine/Time/: Clock.mcpp
Engine/Gfx/: README.rst  project.lua
Engine/Gfx/src/: Dependencies.mcpp  PvrTextureDemo.cpp
Engine/Gfx/src/Demos/: LoadImage.mcpp  Pvr2DTexturedShapesDemo.cpp  PvrSpritesDemo.cpp  ResizeWindow.mcpp  ShowTexture.mcpp
Engine/Gfx/src/Demos/Emscripten/: Simple.cpp
Engine/Gfx/src/Lp3/Engine/Gfx/: Bitmap.mcpp  Geometry.hpp  Geometry.mcpp  GradientRenderer.mcpp  Image.mcpp  ImageMemory.hpp  ImageMemory.mcpp  Pixel.mcpp  PixelDiff.mcpp  PixelTest.cpp  Renderer.hpp  Renderer.mcpp  Screen.mcpp  Texture.mcpp  TexturePtr.hpp  TileRenderer.mcpp  TileSet.mcpp  VertexPixel.mcpp  VideoMemory.mcpp
Engine/Gfx/src/Lp3/Engine/Gfx/Dreamcast/: DreamcastGfxManager.mcpp  DreamcastImageMemory.mcpp  DreamcastRenderer.mcpp  DreamcastScreen.mcpp  DreamcastTexture.mcpp
Engine/Gfx/src/Lp3/Engine/Gfx/PC/: FlexRenderer.mcpp  OpenGlFunctions.hpp  OpenGlHeaders.hpp  OpenGlImageMemory.mcpp  OpenGlManager.mcpp  OpenGlRenderer.mcpp  OpenGlScreen.mcpp  OpenGlTexture.mcpp
Engine/Input/: README.txt  project.lua
Engine/Input/src/: dependencies.mcpp
Engine/Input/src/Demos/: Demo.mcpp  DxDemo.mcpp  XInputDemo.mcpp
Engine/Input/src/Lp3/Input/: ButtonMapping.mcpp  Control.mcpp  Controls.mcpp  Device.mcpp  DeviceSource.mcpp  InputManager.hpp  LpDirectInput.h  PlatformDevice.mcpp  PlatformDeviceSource.mcpp
Engine/Input/src/Lp3/Input/DirectInput/: DiGamePadDevice.mcpp  DiJoyPadDevice.mcpp  DiKeyboardDevice.mcpp  DirectInputDevice.mcpp  DirectInputDeviceSource.mcpp  XInputChecker.h
Engine/Input/src/Lp3/Input/Dreamcast/: DreamcastDeviceSource.mcpp
Engine/Input/src/Lp3/Input/Windows/: WindowsDeviceSource.mcpp
Engine/Input/src/Lp3/Input/XInput/: XInputDevice.mcpp  XInputDeviceSource.mcpp
src/: Dependencies.mcpp
src/Core/Demos/: AssertDemo.cpp  Demo.cpp
src/Core/Lp3/: Constraints.h  DreamcastTestAsserts.mcpp  Exception.mcpp  LE.mcpp  Log.h  Log.mcpp  Test.h
src/Core/Lp3/Engine/: Binary.mcpp  BoostException.cpp  DemoUtils.mcpp
src/Core/Lp3/Engine/Memory/: Host.mcpp  HostObject.mcpp  ManagedPointer.mcpp  MemoryStack.mcpp
src/Core/Lp3/Engine/Misc/: Hash.cpp  Hash.h  WCharToCharConverter.mcpp
src/Core/Lp3/Engine/Resources/: DreamcastInputFileStream.mcpp  EnvVars.mcpp  InputFileStream.mcpp  MemoryStream.mcpp  PcInputFileStream.mcpp  ReadStream.mcpp
src/Core/Lp3/Engine/Time/: Clock.mcpp
src/Gfx/Demos/: DrawText.mcpp  HighResolution.mcpp  LoadImage.mcpp  MotivatingExample.mcpp  Pvr2DShapesDemo.cpp  ShowTexture.mcpp  Triangles.mcpp
src/Gfx/Demos/OpenGL/: OpenGlDemo.mcpp
src/Gfx/Lp3/Engine/Gfx/: Bitmap.mcpp  Geometry.hpp  Geometry.mcpp  GfxManager.hpp  GfxManager.mcpp  ImageMemory.mcpp  InternalPixel.mcpp  Pixel.mcpp  Renderer.mcpp  RendererStructs.mcpp  Texture.hpp  Texture.mcpp  TexturePtr.hpp  TileRenderer.mcpp  TileSet.mcpp  Vertex.mcpp  Windows.mcpp
src/Gfx/Lp3/Engine/Gfx/Dreamcast/: DreamcastGfxManager.mcpp  DreamcastRenderer.mcpp  DreamcastTexture.mcpp
src/Gfx/Lp3/Engine/Gfx/PC/: OpenGlFunctions.hpp  OpenGlRenderer.mcpp
src/Input/Demos/: DreamcastDemo.mcpp  ToolsDemo.mcpp
src/Input/Lp3/Input/: ButtonMapping.mcpp  Controls.mcpp  Device.mcpp  Mouse.mcpp  ToolControls.mcpp
src/Input/Lp3/Input/DirectInput/: DiJoyPadDevice.mcpp  DiKeyboardDevice.mcpp  DirectInputDeviceSource.mcpp  XInputChecker.cpp
src/Input/Lp3/Input/Dreamcast/: DreamcastDevice.mcpp
src/Input/Lp3/Input/XInput/: XInputDeviceSource.mcpp
src/Sfx/Demos/: PlayWave.mcpp  SoundDemo.mcpp
src/Sfx/Lp3/Engine/Sfx/: Channel.mcpp  ChannelSource.mcpp  SfxManager.mcpp  StreamResult.mcpp  WaveFile.mcpp  WaveFileSource.mcpp  WaveFormatEx.mcpp
src/Sfx/Lp3/Engine/Sfx/Sources/: BasicSound.mcpp  Chirpy.mcpp  Sinusoidal.mcpp  Tones.mcpp
src/Windows/Demos/: ToolsDemo.mcpp
src/Windows/Lp3/Engine/Windows/: ToolControls.mcpp
test_package/: CMakeLists.txt  conanfile.py  hello.cpp
